--- a/src/app/components/slots/slots.component.html
+++ b/src/app/components/slots/slots.component.html
@@ -1,9 +1,9 @@
 <h2>Slots calendar</h2>
 <div class="container-fluid">
   <div class="row">
-    <div class="slot-days col-lg-8 col-md-8">
+    <div class="slot-days col-sm-8 col-md-8">
         <div class="row">
-            <div class="slot-day col-lg-2 col-md-2" *ngFor="let slotDay of slotDays" >
+            <div class="slot-day col-sm-2 col-md-2" *ngFor="let slotDay of slotDays" >
               {{slotDay.date | date: 'dd MMM yyyy'  }}
               <div *ngFor="let slot of slotDay.slots" class="slot" [class.reserved]="slot.reserved" [class.available]="slot.available" (click)="selectSlot(slot)">
                 {{slot.startTime.substring(11, 16) }} - {{ slot.endTime.substring(11, 16)}}
@@ -12,7 +12,7 @@
 
         </div>
     </div>
-    <div class="slot-editor col-lg-4 col-md-4" *ngIf="currentSlot">
+    <div class="slot-editor col-sm-4 col-md-4" *ngIf="currentSlot">
       {{currentSlot.id}}
       <div class="form-group">
         <label for="name">Name</label>
